# scaffolding_multiagentsystem

./: .gitignore  README.md  autosetup_fortesting.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
MAS/: .gitignore  AGENT_LOGGING_FIX.md  AGENT_RESPONSE_DUPLICATION_AND_CM_SUBMIT_BUTTON_FIX.md  CHANGES_IN_AI_AGENT_HANDLING.md  CONCEPT_MAP_DEBUGGING_FIX.md  ENHANCED_CONCEPT_MAP_LOGGING.md  ENHANCED_IO_IMPROVEMENTS.md  GROQ_MODEL_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SCAFFOLDING.md  INTERACTION_PATTERNS_DOCUMENTATION.md  INTERACTION_PATTERNS_IMPLEMENTATION.md  INTERACTIVE_EXPERIMENTAL_PLATFORM.md  LICENSE  LOGGING_FIX_SUMMARY.md  MANIFEST.in  README.md  STREAMLIT_INTEGRATION_UPDATE.md  TEMPLATE_SELECTION_IMPROVEMENTS.md  UUID_RESOLUTION_FIX.md  __init__.py  cli.py  config.json  create_directories.py  demo.py  experimental_demo.py  mas_system.py  requirements.txt  run_all_examples.py  setup.py  simple_demo.py  standalone_demo.py  system.py  test_gibberish_detection.py  test_imports.py  test_interaction_patterns.py  test_pattern_integration.py  test_template_selection.py  test_uuid_fix.py  verify_pattern_detection.py
MAS/agents/: __init__.py  agent_factory.py  base_agent.py  conceptual_scaffolding_agent.py  content_ingestion_agent.py  example_map_agent.py  lead_agent.py  learner_profiling_agent.py  metacognitive_scaffolding_agent.py  neutral_agent.py  procedural_scaffolding_agent.py  strategic_scaffolding_agent.py
MAS/app/: app.py  application_session.py  auto_scroll.py  (+8 more)
output/: concept_map_round_0.json  demo_config.json
(+96 files in other folders)
